<resources>
    <string name="app_name">InventoryApp(Bgangu)</string>
    <string name="sale_button">Sale</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier</string>
    <string name="product_supplier_phone_number">Phone Number</string>
    <string name="product_delete_button">Delete</string>
    <string name="product_order_button">Order</string>
    <string name="empty_view_title_text">Inventory Is Empty Now</string>
    <string name="empty_view_subtitle_text">Tap on the Fab bar to add items</string>
    <string name="title_activity_test">Test</string>
    <string name="add_a_product">Add A Product</string>
    <string name="edit_product">Edit product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_failed">Failed to insert item</string>
    <string name="editor_insert_item_successful">Successfully added item</string>
    <string name="editor_update_item_failed">Failed to update the item</string>
    <string name="editor_update_item_successful">Successfully updated the item</string>
    <string name="editor_delete_item_failed">Deletion failed</string>
    <string name="editor_delete_item_successful">Deleted the item successfully</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="less_than_zero">Can not be less than 0</string>
    <string name="action_delete_all">Delete all</string>
</resources>
